kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant-app
  labels:
    name: restaurant-app
